<resources>
    <string name="app_name">APP</string>
    <string name="admin_page">Login as Admin</string>
    <string name="user_page">Login as User</string>
    <string name="welcome_message">\"Welcome Message\"</string>
    <string name="admin_login_message">Admin Login</string>
    <string name="admin_login_button">Login</string>
    <string name="user_login_message">User Login</string>
    <string name="user_login_button">Login</string>
    <string name="admin_name">ADMIN NAME</string>
    <string name="new_session_button">Start New Session</string>
    <string name="data_settings_button">Data Display Settings</string>
    <string name="session_history_button">Session History</string>
    <string name="admin_logout_button">Logout</string>
    <string name="contact_admin_button">Contact Admin</string>
    <string name="data_display">Data Display</string>
    <string name="user_name">USER NAME</string>
    <string name="password_display">Password:</string>
    <string name="admin_login_name">Username:</string>
    <string name="add_data">Add data</string>
    <string name="contact_driver">Contact Driver</string>
    <string name="manage_users">Manage Users</string>
    <string name="conStatusImage">Connection Status</string>
    <string name="db">Dashboard</string>
    <string name="data">Data Settings</string>
    <string name="Logout">Logout</string>
    <string name="close">close</string>
    <string name="no_connection">Failed to connect to the server!!</string>
    <string name="warning">warning</string>
    <string name="re_connect">Try Again</string>
    <string name="Manage_users">Manage Users</string>
    <string name="open">Open</string>
    <string name="action_settings">Settings</string>


</resources>
