<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="265dp"
        android:layout_height="185dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/closeReconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/close"
                app:srcCompat="@drawable/ic_close_black_24dp"
                tools:layout_editor_absoluteX="345dp"
                tools:layout_editor_absoluteY="231dp" />

            <ImageView
                android:id="@+id/warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                android:contentDescription="@string/warning"
                app:srcCompat="@drawable/ic_warning_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/no_connection"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <Button
                android:id="@+id/reconnect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/re_connect" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>